# checkSidesSum

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  InputProcessor.cpp  InputProcessor.h
tests/: CMakeLists.txt  checksidessumtests.cpp
